workloads/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  labels:
    app: jellyseerr
spec:
  type: ClusterIP
  selector:
    app: jellyseerr
  ports:
    - port: 5055
      targetPort: http
      protocol: TCP
      name: http
