workloads/jellyseerr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyseerr.home.drewdevlab.com`)
      kind: Rule
      services:
        - name: jellyseerr
          port: 5055
  tls:
    secretName: wildcard-home-tls
